objects/Incentive_Promotion__c.object
<CustomObject>
    <description>List of promotions for incentive passwords</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incentive Promotions</relationshipLabel>
        <relationshipName>Incentive_Password_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incentive_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Promotion Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the promotion ends</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Request_Date__c</fullName>
        <label>Last Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Incentive Promotions</relationshipLabel>
        <relationshipName>Incentive_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>if(Domain_Name__c  = &apos;WESTLAW&apos; , if( Promotion_Type__c =&apos;PUBRECS&apos;,&apos;Public Records&apos;,&apos;WestLaw&apos;),&apos;WestLaw Next&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Key__c</fullName>
        <label>Promotion Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Number__c</fullName>
        <description>Unique promotion number</description>
        <label>Promotion Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date that the promotion starts</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Incentive Promotions</relationshipLabel>
        <relationshipName>Incentive_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incentive Promotion</label>
    <nameField>
        <label>Promotion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>